Lot of Additions; see description
- new specification for axis label roations and sizes
- new PDF format saver
- better use of sub-classes to save plots
- new axis for time-series with spacing of x-points (TimeUnits)
- more customizable legend alignment
- new RegressionNumericalTimeline Plot
- new BrokenAxis tick generator

--- a/PinoPlotting/MyPlotting.csproj
+++ b/PinoPlotting/MyPlotting.csproj
@@ -1,14 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+    <PackageReference Include="PDFsharp" Version="6.2.2" />
     <PackageReference Include="ScottPlot" Version="5.0.55" />
+    <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
+    <PackageReference Include="Svg" Version="3.4.7" />
+    <PackageReference Include="Svg.Skia" Version="3.2.1" />
   </ItemGroup>
+
+	<PropertyGroup>
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+	</PropertyGroup>
 
   <ItemGroup>
     <Reference Include="AdvancedDataStructures">
